--- a/TODO.txt
+++ b/TODO.txt
@@ -5,9 +5,9 @@ TODO
 ✅ Show number of checked items
 ✅ Only show filter if JS is working
 ✅ Clear all checked jokers
-* Clear filter text
-* Popover for card details
-* Grid / List view toggle
-* Sort by game order or alphabetical
+✅ Clear filter text
+✅ Grid / List view toggle
+✅ Sort by game order or alphabetical
 * Show/Hide checked jokers
+* Popover for card details
 * About page
